test/sema/lambdas/lambda_param_type_uninferred.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:6: error: explicit type annotations are needed to infer the type of 'x'
  ->(x) { x; };
}
